# Engineered_CDRH3_MMP9_Binding

./: README.md  cdrh3_mmp9_inference.py  pyproject.toml
Models/lstm_15B_SHAP_run1_revised_mmp9_030824/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Models/lstm_15B_SHAP_run1_revised_mmp9_030824/variables/: variables.data-00000-of-00001  variables.index
Models/lstm_3B_run2_SHAP_revised_mmp9_051624/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Models/lstm_3B_run2_SHAP_revised_mmp9_051624/variables/: variables.data-00000-of-00001  variables.index
Models/lstm_650MB_run1_SHAP_Mask_revised_mmp9_030824/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Models/lstm_650MB_run1_SHAP_Mask_revised_mmp9_030824/variables/: variables.data-00000-of-00001  variables.index
Models/lstm_antiberty_run1_SHAP_Mask_revised_mmp9_030824/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Models/lstm_antiberty_run1_SHAP_Mask_revised_mmp9_030824/variables/: variables.data-00000-of-00001  variables.index
training_data/: df_unique_CDRH3_original_cleaned.csv
